--- a/police/index.html
+++ b/police/index.html
@@ -6,7 +6,7 @@
   <link rel="icon" type="image/x-icon" href="./images/badge.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Traffic Records</title>
-  <script type="module" crossorigin src="./main.js"></script>
+  <script type="module" crossorigin src="./index.js"></script>
   <link rel="stylesheet" href="./style.css">
 </head>
 
