--- a/police/index.html
+++ b/police/index.html
@@ -3,16 +3,16 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/x-icon" href="/images/badge.png" />
+  <link rel="icon" type="image/x-icon" href="./images/badge.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Traffic Records</title>
-  <script type="module" crossorigin src="/index.js"></script>
-  <link rel="stylesheet" href="/style.css">
+  <script type="module" crossorigin src="./index.js"></script>
+  <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
   <div id="app"></div>
-  
+
 </body>
 
 </html>
